[project]
name = "stock_predictor"
version = "0.1.0"
description = "Web application for stock price prediction using AutoGluon"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/stock-prediction-app"
"Bug Tracker" = "https://github.com/yourusername/stock-prediction-app/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {"where": ["."]}

dependencies = [
    "python>=3.12,<3.13",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "yfinance>=0.2.0",
    "plotly>=5.15.0",
    "autogluon[timeseries]>=1.3.1",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "python-dateutil>=2.8.2",
    "pytest>=7.0.0",
]

